--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "movie-chat",
+  "name": "firebase-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^8.1.1",
+    "milligram": "^1.4.1",
+    "moment": "^2.29.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "typescript": "^4.0.3"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "@types/firebase": "^3.2.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
